# stormtrooper

./: 404.html  README.md  citation.cff  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: static.yml  tests.yml
docs/: conf.py  index.md  index.rst  inference_on_gpu.rst  models.md  openai.rst  prompting.rst  text2text.rst  textgen.rst
docs/_build/doctrees/: environment.pickle  generative.doctree  index.doctree  inference_on_gpu.doctree  openai.doctree  prompting.doctree  setfit.doctree  text2text.doctree  textgen.doctree  zeroshot.doctree
docs/_build/html/: .buildinfo  generative.html  genindex.html  index.html  inference_on_gpu.html  objects.inv  openai.html  prompting.html  search.html  searchindex.js  setfit.html  text2text.html  textgen.html  zeroshot.html
docs/_build/html/_sources/: generative.rst.txt  index.rst.txt  openai.rst.txt  prompting.rst.txt  setfit.rst.txt  zeroshot.rst.txt
models/: index.html
stormtrooper/: __init__.py  _setfit.py  chat.py  error.py  generative.py  openai.py  openai_async.py  set_fit.py  setfit.py  text2text.py  text_gen_inference.py  text_to_text.py  trooper.py  zero_shot.py
tests/: test_trooper.py
