[tool.black]
line-length = 79

[tool.poetry]
name = "stormtrooper"
version = "0.5.0"
description = "Transformer/LLM-based zero and few-shot classification in scikit-learn pipelines"
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.0"
scikit-learn = "^1.2.0"
transformers = ">=4.25.0, <4.41.0"
tqdm = "^4.60.0"
thefuzz = "^0.18.0"
aiohttp = "^3.8.0"
openai = { version = "^0.28.0", optional = true }
setfit = { version = "^0.7.0", optional = true }
datasets = { version = "^2.14.0", optional = true }
torch = { version = "^2.0.0", optional = true}
mkdocs = { version = "^1.5.2", optional = true }
mkdocs-material = { version = "^9.5.12", optional = true }
mkdocstrings = { version = "^0.24.0", extras = ["python"], optional = true }

[tool.poetry.extras]
setfit = ["setfit", "datasets"]
torch = ["torch"]
openai = ["openai"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
